--- a/styles/board/comment.module.css
+++ b/styles/board/comment.module.css
@@ -2,18 +2,28 @@
     margin: 10rem 0 5rem;
 }
 
-.item {
+.item_wrap {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    overflow: hidden;
     border-radius: 1rem;
-    padding: 1rem;
     cursor: pointer;
     transition: .25s;
 }
 
-.item:hover {
+.item_wrap:hover {
     background-color: var(--hover);
+}
+
+.item {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.deleted {
+    color: var(--text-level-2);
 }
 
 .child {
