--- a/styles/board/post.module.css
+++ b/styles/board/post.module.css
@@ -37,6 +37,16 @@
     text-align: initial;
 }
 
+.post_write_wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.post_write_wrap > * {
+    width: 100%;
+}
+
 @media screen and (min-width: 0) and (max-width: 750px) {
 
     .post {
