ADD: 상단 메뉴바 뒤로가기 버튼

--- a/styles/board/board.module.css
+++ b/styles/board/board.module.css
@@ -1,6 +1,6 @@
 .post_list {
     gap: 2rem;
-    margin-bottom: 8rem;
+    margin: 1rem 0 8rem;
 }
 
 .post_item_wrap {
@@ -64,7 +64,8 @@
 }
 
 .category_list {
-    padding: 0 1rem 1rem;
+    padding: 0 1rem;
+    align-items: center;
 }
 
 .category_list li {
