--- a/styles/board/post.module.css
+++ b/styles/board/post.module.css
@@ -4,7 +4,7 @@
     height: 100%;
     top: 0;
     left: 100%;
-    padding: 15rem .5rem 0;
+    padding: 15rem .5rem 1rem;
     background-color: var(--background);
     transition: .25s;
 }
@@ -40,7 +40,9 @@
 .post_write_wrap {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 1rem;
+    height: 100%;
 }
 
 .post_write_wrap > * {
