FIX: 게시글 메뉴 상단 헤더에서 나오게 변경

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -52,6 +52,10 @@
     padding: 1.4rem 1.1rem;
 }
 
+.all_menu ~ :global(.dropdown-content) {
+    width: 14rem;
+}
+
 .item:hover {
     background-color: var(--hover);
 }
