ADD: 커뮤니티 사진 업로드, FIX: AJAX 에러 핸들링

--- a/styles/board/post.module.css
+++ b/styles/board/post.module.css
@@ -35,6 +35,11 @@
 
 .post_content {
     text-align: initial;
+    overflow: auto;
+}
+
+.post_content img {
+    max-width: 100%;
 }
 
 .post_write_wrap {
