ADD: 댓글에 이모티콘 넣기 & 이모티콘 렌더링

--- a/styles/board/comment.module.css
+++ b/styles/board/comment.module.css
@@ -22,6 +22,10 @@
     padding: 1rem;
 }
 
+.item div:nth-child(2) {
+    white-space: pre-wrap;
+}
+
 .deleted {
     color: var(--text-level-2);
 }
