--- a/styles/board/emoticon.module.css
+++ b/styles/board/emoticon.module.css
@@ -19,9 +19,47 @@
     flex-wrap: wrap;
 }
 
+.emoticon_item_list li {
+    background-color: var(--level-2);
+    cursor: pointer;
+    transition: .25s;
+}
+
+.emoticon_item_list li:hover {
+    background-color: var(--hover);
+}
+
 .emoticon_item_list :is(li, img) {
     min-width: 10rem !important;
     max-width: 10rem !important;
     min-height: 10rem !important;
     max-height: 10rem !important;
+}
+
+.upload_list li label {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.upload_list li {
+    border-radius: 0 !important;
+    padding: 0 !important;
+}
+
+.upload_thumbnail {
+    display: flex;
+    align-items: flex-end;
+}
+
+.upload_thumbnail :is(label, img) {
+    min-width: 10rem;
+    height: 4.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: .5rem;
 }
