--- a/styles/board/comment.module.css
+++ b/styles/board/comment.module.css
@@ -32,7 +32,7 @@
 
 .child {
     margin-left: 5rem;
-    border-left: 1px solid gray;
+    border-left: .1rem solid gray;
 }
 
 .user_profile {
@@ -52,6 +52,26 @@
     padding: .5rem;
     width: auto;
     animation: show-write-bar .25s forwards;
+}
+
+.write_bar_menu {
+    display: flex;
+    background-color: var(--level-2);
+    border-radius: .75rem;
+}
+
+.write_bar_menu button {
+    padding: 1.5rem 2rem;
+}
+
+.write_bar_menu .emoticon_button {
+    padding: 1rem;
+}
+
+.write_bar_menu .emoticon_button img {
+    width: 2.5rem;
+    height: 2.5rem;
+    filter: var(--bright);
 }
 
 @media screen and (min-width: 0) and (max-width: 600px) {
@@ -78,8 +98,8 @@
     flex: 1;
     border-radius: 1rem;
     background-color: var(--menu-background);
-    backdrop-filter: blur(3px);
-    width: calc(100% - 78px);
+    backdrop-filter: blur(.3rem);
+    width: calc(100% - 19.1rem);
 }
 
 .write_wrap :global(.comment-input) {
