ADD: 커뮤니티 익명 모드 표시, FIX: #1 프로필 레이아웃 깨지는 문제

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -226,19 +226,28 @@
 }
 
 .user_profile_wrap {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
     padding: 0;
     height: 100%;
 }
 
+.user_profile_wrap > div {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    max-width: 18rem;
+    padding: 0 1rem;
+}
+
 .user_profile_wrap span {
-    margin-left: auto;
+    flex: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-left: 1rem;
+    font-size: 1.6rem;
 }
 
 .user_profile_wrap :global(.user-profile) {
-    margin-right: 2rem;
     height: 5.2rem;
     width: 5.2rem;
 }
