--- a/styles/board/board.module.css
+++ b/styles/board/board.module.css
@@ -1,3 +1,10 @@
+.board {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .post_list {
     gap: 2rem;
     margin: 1rem 0 8rem;
@@ -63,8 +70,18 @@
     height: 5rem;
 }
 
+.category_list_wrap {
+    position: sticky;
+    z-index: 1;
+    top: 0;
+    margin: 0 .5rem;
+    background-color: var(--menu-background);
+    backdrop-filter: blur(.5rem);
+    border-radius: 1rem;
+}
+
 .category_list {
-    padding: 0 1rem;
+    padding: .5rem 1rem;
     align-items: center;
 }
 
