ADD: 간략한 시간표 정보 표시, FIX: 학반번호 자동 입력 안 되는 버그

--- a/styles/timetable.module.css
+++ b/styles/timetable.module.css
@@ -149,6 +149,20 @@
     gap: 1rem;
 }
 
+.timetable_list {
+    display: flex;
+    background-color: var(--menu-background);
+    border-radius: 1rem;
+}
+
+.timetable_list li {
+    padding: 1rem;
+}
+
+.timetable_list li.active {
+    background-color: var(--accent);
+}
+
 @media screen and (min-width: 0) and (max-width: 750px) {
     .select_day {
         top: auto;
