--- a/styles/meal.module.css
+++ b/styles/meal.module.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    text-align: center;
 }
 
 .meals {
@@ -25,6 +26,7 @@
     pointer-events: all;
     cursor: pointer;
     transition: .2s;
+    user-select: none;
 }
 
 .meals li > div {
@@ -33,16 +35,10 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 2rem;
     box-shadow: var(--shadow-level-1);
-    filter: grayscale(.6);
     border-radius: 2rem;
     opacity: .65;
     transition: .2s;
-}
-
-.meals li h3 {
-    font-size: 1.8rem;
 }
 
 .meals:not(:hover) li.center,
@@ -61,38 +57,19 @@
 
 .meals:not(:hover) li.center h3,
 .meals li:hover h3 {
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .meals li.date_color_0 > div {
-    background-color: var(--red-level-1);
-}
-
-.meals li.date_color_1 > div {
-    background-color: var(--yellow-level-1);
-}
-
-.meals li.date_color_2 > div {
-    background-color: var(--green-level-1);
-}
-
-.meals li.date_color_3 > div {
-    background-color: var(--blue-level-1);
-}
-
-body:global(.dark)
-.meals li:is(
-    .date_color_0,
-    .date_color_2
-) > div {
     background-color: var(--level-1);
 }
 
+.meals li.date_color_1 > div {
+    background-color: var(--level-2);
+}
+
 body:global(.dark)
-.meals li:is(
-    .date_color_1,
-    .date_color_3
-) > div {
+.meals li.date_color_1 > div {
     background-color: var(--level-3);
 }
 
@@ -101,6 +78,7 @@ body:global(.dark)
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 1rem;
 }
 
 .date {
@@ -110,7 +88,18 @@ body:global(.dark)
     top: -4rem;
     left: 50%;
     transform: translateX(-50%);
+    pointer-events: none;
 }
+
+.meal_info {
+    font-size: 1.5rem;
+    padding: .5rem;
+    border-radius: 2rem 2rem 0 0;
+}
+
+.meal_info.red {background-color: var(--red);}
+.meal_info.yellow {background-color: var(--yellow);}
+.meal_info.green {background-color: var(--green);}
 
 .notification_button {
     position: fixed;
